embedded/ros2_ws/log/build_2024-09-27_15-13-49/sub2/stdout_stderr.log
running egg_info
writing ..\..\build\sub2\sub2.egg-info\PKG-INFO
writing dependency_links to ..\..\build\sub2\sub2.egg-info\dependency_links.txt
writing entry points to ..\..\build\sub2\sub2.egg-info\entry_points.txt
writing requirements to ..\..\build\sub2\sub2.egg-info\requires.txt
writing top-level names to ..\..\build\sub2\sub2.egg-info\top_level.txt
reading manifest file '..\..\build\sub2\sub2.egg-info\SOURCES.txt'
writing manifest file '..\..\build\sub2\sub2.egg-info\SOURCES.txt'
running build
running build_py
copying sub2\load_map.py -> C:\Users\SSAFY\Desktop\ros2_ws\build\sub2\build\lib\sub2
running install
running install_lib
copying C:\Users\SSAFY\Desktop\ros2_ws\build\sub2\build\lib\sub2\load_map.py -> C:\Users\SSAFY\Desktop\ros2_ws\install\sub2\Lib\site-packages\sub2
byte-compiling C:\Users\SSAFY\Desktop\ros2_ws\install\sub2\Lib\site-packages\sub2\load_map.py to load_map.cpython-37.pyc
running install_data
running install_egg_info
removing 'C:\Users\SSAFY\Desktop\ros2_ws\install\sub2\Lib\site-packages\sub2-0.0.0-py3.7.egg-info' (and everything under it)
Copying ..\..\build\sub2\sub2.egg-info to C:\Users\SSAFY\Desktop\ros2_ws\install\sub2\Lib\site-packages\sub2-0.0.0-py3.7.egg-info
running install_scripts
Installing a_star-script.py script to C:\Users\SSAFY\Desktop\ros2_ws\install\sub2\lib\sub2
Installing a_star.exe script to C:\Users\SSAFY\Desktop\ros2_ws\install\sub2\lib\sub2
Installing a_star_local_path-script.py script to C:\Users\SSAFY\Desktop\ros2_ws\install\sub2\lib\sub2
Installing a_star_local_path.exe script to C:\Users\SSAFY\Desktop\ros2_ws\install\sub2\lib\sub2
Installing ex_calib-script.py script to C:\Users\SSAFY\Desktop\ros2_ws\install\sub2\lib\sub2
Installing ex_calib.exe script to C:\Users\SSAFY\Desktop\ros2_ws\install\sub2\lib\sub2
Installing human_detector-script.py script to C:\Users\SSAFY\Desktop\ros2_ws\install\sub2\lib\sub2
Installing human_detector.exe script to C:\Users\SSAFY\Desktop\ros2_ws\install\sub2\lib\sub2
Installing load_map-script.py script to C:\Users\SSAFY\Desktop\ros2_ws\install\sub2\lib\sub2
Installing load_map.exe script to C:\Users\SSAFY\Desktop\ros2_ws\install\sub2\lib\sub2
Installing odom-script.py script to C:\Users\SSAFY\Desktop\ros2_ws\install\sub2\lib\sub2
Installing odom.exe script to C:\Users\SSAFY\Desktop\ros2_ws\install\sub2\lib\sub2
Installing path_tracking-script.py script to C:\Users\SSAFY\Desktop\ros2_ws\install\sub2\lib\sub2
Installing path_tracking.exe script to C:\Users\SSAFY\Desktop\ros2_ws\install\sub2\lib\sub2
Installing seg_binarizer-script.py script to C:\Users\SSAFY\Desktop\ros2_ws\install\sub2\lib\sub2
Installing seg_binarizer.exe script to C:\Users\SSAFY\Desktop\ros2_ws\install\sub2\lib\sub2
writing list of installed files to 'C:\Users\SSAFY\Desktop\ros2_ws\build\sub2\install.log'
  File "C:\Users\SSAFY\Desktop\ros2_ws\install\sub2\Lib\site-packages\sub2\load_map.py", line 77
    back_folder='C:\Users\SSAFY\Desktop\ros2_ws\src\sub2'
               ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape

